--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -3,30 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context=".FindBeerActivity" >
-    <Spinner android:id="@+id/color"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
+    tools:context=".FindBeerActivity">
+
+    <Spinner
+        android:id="@+id/color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
         android:entries="@array/beer_colors" />
-    <Button android:id="@+id/find_beer"
+
+    <Button
+        android:id="@+id/find_beer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/color"
         android:layout_below="@+id/color"
-        android:text="@string/find_beer"
-        android:onClick="onClickFindBeer" />
-    <TextView android:id="@+id/brands"
+        android:layout_alignLeft="@+id/color"
+        android:onClick="onClickFindBeer"
+        android:text="@string/find_beer" />
+
+    <TextView
+        android:id="@+id/brands"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/find_beer"
         android:layout_below="@+id/find_beer"
+        android:layout_alignLeft="@+id/find_beer"
         android:layout_marginTop="18dp"
         android:text="@string/brands" />
 </RelativeLayout>
